Version 1.7.14+svn:
 * AI:
   * fix bug #15390: add a try_delete action to modify_ai which has
     'delete if exists, don't complain if not exists' semantics
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Japanese

Version 1.7.14-1.8beta7:
 * AI:
   * Allow to write AI components in LUA
   * Implemented FR #15465: 'protect' goal was split into protect_location, 
     protect_unit, protect_my_unit [goal] tags. protect_my_unit can be used 
     as a direct replacement for protect_leader.
 * Graphics:
   * Fixed bug 15344: missing ice to nothing transition
   * Fixed weird side effect of long first frame in standing anims
   * Fix bug 15366 : overlay terrains badly interacting with submerge and height
     adjustments
   * Fix bug 15544 : bad transitions between roads and deserts with overlay
 * Language and i18n:
   * Updated translations: Catalan, Chinese (Traditional), Czech, Estonian,
     Finnish, German, Greek, Italian, Japanese, Lithuanian, Polish, Serbian
 * Multiplayer
   * Make allow_changes attribute truly work
   * Fixed players getting different side colours across scenarios of mp
     campaigns
   * Fixed bug 14754: Host can start game before the client has selected a
     leader (Debian bug #555964)
   * Fix bug #15380 (cl in multiplayer local game doesn't work)
   * Fix bug #15382 (Player doesn't get transported to the next scenario)
   * Fix bug #15383 (Multiplayer Campaigns can't be loaded from savegame)
   * Fix bug #15391 (Warnings in multiplayer games)
   * Fix bug #15398 (Multiplayer Campaign aborted after endlevel)
   * Fix bug #15399 (Leaders of the ai sides in LoW multiplayer scenario2 are
     missing)
   * Allow a 1-sides game to be started (Debian bug #568029)
   * Fixed A New Land not working when there are empty sides
 * User interface:
   * Rewrote the sizing code of the tree view widget
   * Don't show turn dialog once the level has ended
   * Fix the empty games in the MP lobby game list