@@ -2,6 +2,8 @@ Version 1.7.14+svn:
  * AI:
    * fix bug #15390: add a try_delete action to modify_ai which has
      'delete if exists, don't complain if not exists' semantics
+   * fix bug #15013: make AI gotos persist between turns when set by
+     WML, make the AI don't use gotos for normal moves.
  * Language and i18n:
    * Updated translations: Chinese (Traditional), Japanese
 
